# translate-KoCEM

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py
app/models/: __init__.py  chainio.py  evallm.py  evaluator.py
app/modules/: HitL.py  __init__.py  evaluator.py  human_in_the_loop.py  translation_chain.py
app/prompts/: accuracy.yaml  adequency.yaml  evallm.yaml  fluency.yaml  format.yaml  human-in-the-loop.yaml  translation.yaml
app/schemas/: KoCEM.py  __init__.py  llm_hacks.py
app/utils/: __init__.py  huggingface_dataloader.py  io.py  logs.py  prompts.py
