[project]
name = "trans-kocem-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.0.1",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "alembic==1.16.4",
    "altair==5.3.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "blinker==1.9.0",
    "cachetools==5.3.3",
    "certifi==2024.8.30",
    "cfgv==3.4.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.1",
    "contourpy==1.3.0",
    "coverage==7.6.4",
    "cycler==0.12.1",
    "databricks-sdk==0.61.0",
    "dataproperty==1.0.1",
    "datasets==3.1.0",
    "debugpy==1.8.0",
    "decorator==5.1.1",
    "dill==0.3.8",
    "distlib==0.3.9",
    "distro==1.9.0",
    "docker==7.1.0",
    "et-xmlfile==1.1.0",
    "evaluate==0.4.3",
    "execnet==2.1.1",
    "executing==2.0.1",
    "fastapi==0.116.1",
    "filelock==3.16.1",
    "fire==0.7.0",
    "flask==3.1.1",
    "fonttools==4.54.1",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-auth==2.40.3",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "greenlet==3.2.3",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "huggingface-hub==0.26.1",
    "identify==2.6.1",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "iniconfig==2.0.0",
    "ipykernel==6.29.0",
    "ipython==8.20.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jiter==0.6.1",
    "joblib==1.4.2",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.22.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-client==8.6.0",
    "jupyter-core==5.7.1",
    "kiwisolver==1.4.7",
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.9",
    "langsmith==0.4.10",
    "lxml==5.3.0",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.6",
    "mbstrdecoder==1.1.3",
    "mdurl==0.1.2",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.5.9",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "nodeenv==1.9.1",
    "numexpr==2.10.1",
    "numpy==2.1.2",
    "openai==1.98.0",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "orjson==3.11.1",
    "packaging==24.1",
    "pandas==2.2.3",
    "pandas-image-methods==0.3.3",
    "parso==0.8.3",
    "pathvalidate==3.2.1",
    "peft==0.13.2",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "portalocker==2.10.1",
    "pre-commit==4.0.1",
    "prompt-toolkit==3.0.43",
    "propcache==0.2.0",
    "protobuf==4.25.3",
    "psutil==6.1.0",
    "pure-eval==0.2.2",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybind11==2.13.6",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydeck==0.9.1",
    "pygments==2.17.2",
    "pyparsing==3.2.0",
    "pytablewriter==1.2.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pywin32==308",
    "pyyaml==6.0.2",
    "pyzmq==25.1.2",
    "readchar==4.2.1",
    "referencing==0.35.1",
    "regex==2024.9.11",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.7.1",
    "rouge-score==0.1.2",
    "rpds-py==0.18.1",
    "rsa==4.9.1",
    "sacrebleu==2.4.3",
    "safetensors==0.4.5",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "setuptools==75.1.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.42",
    "sqlitedict==2.1.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.47.2",
    "sympy==1.13.1",
    "tabledata==1.3.3",
    "tabulate==0.9.0",
    "tcolorpy==0.1.6",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tiktoken==0.8.0",
    "tokenizers==0.20.1",
    "toml==0.10.2",
    "toolz==0.12.1",
    "torch==2.5.0",
    "tornado==6.4",
    "tqdm==4.66.5",
    "tqdm-multiprocess==0.0.11",
    "traitlets==5.14.1",
    "transformers==4.46.0",
    "typepy==1.3.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uvicorn==0.35.0",
    "virtualenv==20.27.0",
    "waitress==3.0.2",
    "watchdog==4.0.1",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wheel==0.44.0",
    "word2number==1.1",
    "xxhash==3.5.0",
    "yarl==1.16.0",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]
